--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,6 +51,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$androidSupportVersion"
     implementation "com.twilio:video-android:7.3.1"
-    implementation 'org.webrtc:google-webrtc:1.0.32006'
+    implementation "com.dafruits:webrtc:107.0.0"
     implementation "com.facebook.react:react-native:+"  // From node_modules
 }
